# bit_op

./: .gitignore  Cargo.toml  README.md
src/: bit.rs  bit_u128.rs  bit_u16.rs  bit_u32.rs  bit_u64.rs  bit_u8.rs  lib.rs  tests.rs
src/bit_op/: mod.rs  u8op.rs
src/tests/: mod.rs  u8op.rs
