[package]
name = "bit_op"
version = "0.1.0"
authors = ["GNULinuxIsGreat"]
edition = "2018"
description = "Bit manipulation"
exclude = [
    "/gen",
    "/tests",
    "*.md",
]
license = "MIT/Apache-2.0"
keywords = ["bit"]
categories = ["embedded", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

