[package]
name = "bit_op"
version = "0.1.1"
authors = ["RustyNixiTube"]
edition = "2018"
description = "Bit manipulation"
documentation = "https://docs.rs/bit_op"
readme = "README.md"
repository = "https://github.com/RustyNixieTube/bit_op"
license = "MIT/Apache-2.0"
exclude = [
    "/gen",
]
keywords = ["bit"]
categories = ["embedded", "no-std"]

publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

